<resources>
    <string name="app_name">AAudioDemo</string>
    <string name="status_title">Status:</string>
    <string name="action_settings">Settings</string>
    <string name="start_echo">开启回声(刺耳)</string>
    <string name="stop_echo">停止</string>
    <string name="start_record">开始录音</string>
    <string name="start_player">开始回放</string>
    <string name="stop_record">停止录音</string>
    <string name="stop_player">停止回放</string>
    <string name="need_record_audio_permission">"This sample needs RECORD_AUDIO permission"</string>
    <string name="status_not_file">无音频文件，请先录音</string>
    <string name="status_echoing">Engine Echoing ....</string>
    <string name="status_record_audio_denied">Error: Permission for RECORD_AUDIO was denied</string>
    <string name="status_touch_to_begin">RECORD_AUDIO permission granted, touch START to begin</string>
    <string name="status_warning">1.开始录音：启动单独录音\n2.开始重放：开始录音回放\n3.开启回声：录音流传入放音流形成刺耳回声 Warning: If you run this sample using the built-in microphone
            and speaker you may create a feedback loop which will not be pleasant to listen to.</string>
    <string name="recording_device">Recording device</string>
    <string name="playback_device">Playback device</string>

    <string name="device_name">Device Name</string>
    <string name="auto_select">Auto select</string>
</resources>
